travel-agency-page.html

--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>ANSTEL — Addai Nketiah</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ANSTEL | Addai Nketiah</title>
 </head>
 <body>
-  <h1>Welcome to ANSTEL</h1>
-  <p>This is my first step in combining business, tech, and data.</p>
-
-  <h2>Businesses</h2>
-  <ul>
-    <li>ANSTEL Barbershop</li>
-    <li>ANSTEL Gym</li>
-    <li>ANSTEL Transport (Bolt driving)</li>
-  </ul>
-
-  <h2>Learning Journey</h2>
-  <p>Started: 17 November 2025 — HTML, CSS, Python, SQL, and Data Analytics.</p>
-
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:nktaddai@gmail.com">nktaddai@gmail.com</a></p>
+  <header>
+    <h1></h1>
+  </header>
 </body>
 </html>
