feat: semantic structure added to ANSTEL homepage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
 </head>
 <body>
   <header>
-    <h1></h1>
+    <h1>Welcome to ANSTEL</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a>
+    </nav>
+    <p>Combining business, tech and data.</p>
   </header>
+  <main>
+    <section>
+      <h2>ANSTEL BUSINESS</h2>
+      <ul>
+        <li>ANSTEL Barbershop</li>
+        <li>ANSTEL Gym</li>
+        <li>ANSTEL Bolt Transport</li>
+      </ul>
+    </section>
+    <section>
+      <h2>My Learning Journey</h2>
+      <p>Started: 17 November 2025 - HTML, CSS, Python, SQL, Data Analysis</p>
+    </section>
+    <section>
+      <h2>Contacts</h2>
+      <p>Email: <a href="mailto:nktaddai@gmail.com">nktaddai@gmail.com</a></p>
+    </section>
+  </main>
+  <footer>
+    <p>© 2025 ANSTEL</p>
+  </footer>
 </body>
 </html>
