--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <section>
       <h2>ANSTEL BUSINESS</h2>
       <ul>
-        <li>ANSTEL Barbershop</li>
-        <li>ANSTEL Gym</li>
-        <li>ANSTEL Bolt Transport</li>
+        <li>ANSTEL <em>Barbershop</em></li>
+        <li>ANSTEL <em>Gym</em></li>
+        <li>ANSTEL <strong>Bolt Transport</strong></li>
       </ul>
     </section>
     <section>
