--- a/anstel-job-title-page.html
+++ b/anstel-job-title-page.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quincy's Tips for Getting a Developer Job</title>
+    <title>Anstel Tips for Getting a Developer Job</title>
   </head>
   <body>
-    <h1>Quincy's Tips for Getting a Developer Job</h1>
+    <h1>Anstel Tips for Getting a Developer Job</h1>
     <p>
       Learning to code is hard, but as Quincy Larson says,
       <q cite="https://www.freecodecamp.org/news/learn-to-code-book/">You can become a developer.</q>
