chore: reorganize project structure and rebuild HTML foundation

--- a/anstel-site/about.html
+++ b/anstel-site/about.html
@@ -9,6 +9,14 @@
     <header>
         <h1>About Adddai NKetiah</h1>
         <nav>
+            <nav>
+            <a href="index.html">Home</a> |
+            <a href="about.html">About</a> |
+            <a href="services.html">Services</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
+        </nav>
+        <nav>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
