--- a/anstel-site/index.html
+++ b/anstel-site/index.html
@@ -7,10 +7,14 @@
 </head>
 <body>
   <header>
+    <!--Heading-->
     <h1>Welcome to ANSTEL</h1>
     <nav>
       <a href="index.html">Home</a> |
-      <a href="about.html">About</a>
+      <a href="about.html">About</a> |
+      <a href="contact.html">Contact</a> |
+      <a href="services.html">Services
+      </a>
     </nav>
     <p>Combining business, tech and data.</p>
   </header>
