--- a/anstel-site/contact.html
+++ b/anstel-site/contact.html
@@ -11,6 +11,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+        <a href="services.html">Services</a>
     </header>
     <main>
         <section>
