week 1 day 1: rebuilt index.html from memory

--- a/anstel-site/index.html
+++ b/anstel-site/index.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ANSTEL | Addai Nketiah</title>
-</head>
-<body>
-  <header>
-    <!--Heading-->
-    <h1>Welcome to ANSTEL</h1>
-    <nav>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About</a> |
-      <a href="contact.html">Contact</a> |
-      <a href="services.html">Services
-      </a>
-    </nav>
-    <p>Combining business, tech and data.</p>
-  </header>
-  <main>
-    <section>
-      <h2>ANSTEL BUSINESS</h2>
-      <ul>
-        <li>ANSTEL <em>Barbershop</em></li>
-        <li>ANSTEL <em>Gym</em></li>
-        <li>ANSTEL <strong>Bolt Transport</strong></li>
-      </ul>
-    </section>
-    <section>
-      <h2>My Learning Journey</h2>
-      <p>Started: 17 November 2025 - HTML, CSS, Python, SQL, Data Analysis</p>
-    </section>
-    <section>
-      <h2>Contacts</h2>
-      <p>Email: <a href="mailto:nktaddai@gmail.com">nktaddai@gmail.com</a></p>
-    </section>
-  </main>
-  <footer>
-    <p>© 2025 ANSTEL</p>
-  </footer>
-</body>
-</html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HOME | ANSTEL</title> 
+  </head>
+
+  <body>
+    <header>
+      <h1>ANSTEL</h1>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="services.html">Services</a>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <h2>Welcome</h2>
+        <p>ANSTEL is a business brand offering grooming, fitness and transport services.</p>
+      </section>
+      <section>
+        <h2>Our Services</h2>
+        <ul>
+          <li>Barbershop</li>
+          <li>Gym and Fitness</li>
+          <li>Transport</li>
+        </ul>
+        <p>Use the menu above to explore our services or contact us.</p>
+      </section>
+    </main>
+    <footer>© 2026 ANSTEL</footer>
+  </body>
+</html> 
