--- a/anstel-site/about.html
+++ b/anstel-site/about.html
@@ -1,97 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | ANSTEL</title>
-</head>
-<body>
-    <header>
-        <h1>About Adddai NKetiah</h1>
-        <nav>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About | ANSTEL</title>
+    </head>
+    <body>
+        <header>
+            <h1>About ANSTEL</h1>
             <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About</a> |
-            <a href="services.html">Services</a> |
-            <a href="contact.html">Contact</a>
-        </nav>
-        </nav>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#skills">Skills</a></li>
-            </ul>
-            <img src="https://media.licdn.com/dms/image/v2/D4D03AQEm8GdCofzjDw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1718237300568?e=1767225600&v=beta&t=r-GVdyT3p4W6grU9zUfcS0Qh4xXAzdGp11uHTWqed4Y" alt="profile picture" />
-        </nav>
-    </header>
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>I am the founder of ANSTEL - A growing group of business including a Barbershop, Gym, and Bolt transport service.</p>
-            <p><em>My Tech Journey</em></p>
-            <p>I started learning tech on 17 November , 2025. I'm focusing on HTML, CSS, Python, SQL, and Data Analytics to prepare for a fully funded Master's abroad.</p>
-        </section>
-        <section id="experience">
-            <h2>Work Experience</h2>
-            <article>
-                <h3>Business Owner</h3>
-                <p><strong>ANSTEL Barbershop | Transport</strong></p>
-                <ul>
-                    <li>Supervised a team of 5+ barbers, ensuring high-quality services and customer
-satisfaction.</li>
-                <li>Implemented inventory management system, reducing supply costs by 10%.</li>
-                <li>Boosted revenue by $100 through targeted marketing campaigns.</li>
-                <li>Maintained compliance with health and safety regulations.</li>
-                <li>Achieved 15% Cost Reduction: Streamlined routes and optimized fuel consumption,
-resulting in significant cost savings.</li>
-                <li>Enhanced Compliance: Ensured full adherence to transportation regulations, leading
-to zero safety violations.</li>
-                <li>Introduced Real-Time Tracking System: Implemented GPS tracking for vehicles,
-improving delivery accuracy by 20%.</li>
-                <li>Improved Dispatch Efficiency: Reduced delivery lead times by 25% through efficient
-scheduling and route planning.</li>
-                </ul>
-            </article>
-            <article>
-                <h3>Financial Officer | Customer Care</h3>
-                <p><strong>Access Bank PLC</strong></p>
-                <ul>
-                    <li>Managed a portfolio of 100+ clients, achieving a 98% client retention rate and driving
-a 15% reduction in operational expenses.</li>
-                    <li>Conducted financial analysis and risk assessments for loan approvals, ensuring sound
-financial decision-making.</li>
-                    <li>Resolved 100+ customer inquiries daily with a 95% satisfaction rate, collaborating
-across departments to streamline processes and enhance service efficiency.</li>
-                    <li>Trained new hires on customer service protocols, contributing to team development
-and consistency in service delivery.</li>
-                </ul>
-            </article>
-        </section>
-        <section id="education">
-            <h2>Educational Background</h2>
-            <article>
-                <h3>University of Capecast - October 2015 - September 2017</h3>
-                <p>Bachelor's Degree in Marketing</p>
-            </article>
-            <article>
-                <h3>Accra Technical University - June 2009 - May 2012</h3>
-                <p>Higher National Diploma in Marketing</p>
-            </article>
-        </section>
-        <section id="skills">
-            <h2>Values I believe In</h2>
-            <ul>
-                <li>Commitment</li>
-                <li>Patience</li>
-                <li>Discipline</li>
-                <li>Hardwork</li>  
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <p>© 2025 ANSTEL</p>
-    </footer>   
-</body>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="services.html">Services</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <h2>Who We Are</h2>
+                <p>ANSTEL is a business brand focused on grooming, fitness, and transport services. We aim to provide reliable and professional services to our customers.</p>
+            </section>
+            <section>
+                <h2>Why we exist</h2>
+                <p>We believe in discipline, consistency, and quality service. ANSTEL was created to support individuals through everyday services that improve lifestlye and prodctivity.</p>
+            </section>
+        </main>
+        <footer>© 2026 ANSTEL</footer>
+    </body>
 </html>
