--- a/anstel-site/services.html
+++ b/anstel-site/services.html
@@ -1,52 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services | ANSTEL</title>
-</head>
-<body>
-    <header>
-        <h1>Our Services</h1>
-        <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About</a> |
-            <a href="services.html">Services</a> |
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Barbershop Services</h2>
-            <p>Professional grooming services designed form modern men</p>
-            <ul>
-                <li>Haricuts</li>
-                <li>Beard grooming</li>
-                <li>Full grooming sessions</li>
-            </ul>
-            <p><a href="contact.html">Join or ask a question</a></p>
-        </section>
-        <section>
-            <h2>Gym & Fitness</h2>
-            <p>Fitness programs focused on strength, endurance, and healthy living.</p>
-            <ul>
-                <li>Gym membership</li>
-                <li>Personal training</li>
-                <li>Group workouts</li>
-            </ul>
-            <p><a href="contact.html">Join or ask a question</a></p>
-        </section>
-        <section>
-            <h2>Transport Services</h2>
-            <p>Reliable city transport services within Accra</p>
-            <ul>
-                <li>Daily rides</li>
-                <li>Airport transfers</li>
-                <li>Scheduled pickups</li>
-            </ul>
-            <p><a href="contact.html">Request a ride</a></p>
-        </section>
-    </main>
-    <footer>© 2026 ANSTEL</footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Services | ANSTEL</title>
+    </head>
+    <body>
+        <header>
+            <h1>Services</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="services.html">Services</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <h2>Barbershop</h2>
+                <p>We provide professional grooming services focused on cleanliness, confidence, and personal presentation.</p>
+            </section>
+            <section>
+                <h2>Gym & Fitness</h2>
+                <p>Our gym supports fitness training and discipline through structured workouts and guidance.</p>
+            </section>
+            <section>
+                <h2>Transport Services</h2>
+                <p>We offer reliable transport services designed to support dialy mobility and convenience.</p>
+            </section>
+        </main>
+        <footer></footer>
+    </body>
 </html>
