--- a/anstel-site/contact.html
+++ b/anstel-site/contact.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | ANSTEL</title>
-</head>
-<body>
-    <header>
-        <h1>Contact Us</h1>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="services.html">Services</a>
-    </header>
-    <main>
-        <section>
-            <h2>Get In Touch With Us</h2>
-            <p>Kindly select the type of service and Fill out the form below.</p>
-            <p><strong>Note:</strong> Kindly complete all required field</p>
-            <fieldset>
-                <legend>Service</legend>
-                <select id="service" name="service">
-                    <option selected value="barbershop">Barbershop</option>
-                    <option value="gym">Gym</option>
-                    <option value="bolt">Bolt Transport</option>
-                </select>
-            </fieldset>
-            <fieldset>
-                <legend>Personal Information</legend>
-                <label for="full-name">Full Name:</label>
-                <input type="text" id="name" name="name" placeholder="eg. Addai Nketiah" required>
-                <label for="email">Email Address:</label>
-                <input type="email" id="email" name="email" placeholder="eg. nkt@email.com" required>
-                <label for="phone">Phone Number:</label>
-                <input type="tel" id="phone" name="phone" placeholder="0249675990" min="10" max="15">
-                </fieldset>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Contact | ANSTEL</title>
+    </head>
+    <body>
+        <header>
+            <h1>Get In Touch</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="services.html">Services</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+        <main>
+            <section>
                 <fieldset>
-                    <legend>Message</legend>
-                    <label for="comment">Comment</label>
-                    <textarea id="comment" name="comment" rows="5" cols="20"></textarea>
+                    <legend>Personal Information</legend>
+                    <div>
+                        <label for="name">Full Name:</label><br>
+                        <input type="text" id="name" name="name" placeholder="e.g Addai Nketiah">
+                    </div>
+                    <div>
+                        <label for="email">Email Address:</label><br>
+                        <input type="email" id="email" name="email" placeholder="e.g nktaddai@gmail.com">
+                    </div>
+                    <div>
+                        <label for="age">Age</label><br>
+                        <input type="number" id="age" name="age" placeholder="20" min="1" max="3">
+                    </div>
+                    <div>
+                        <label for="phone">Telephone Number</label><br>
+                        <input type="tel" id="phone" name="phone" placeholder="+xxx674990">
+                    </div>
                 </fieldset>
+                    <div>
+                    <label>Message</label><br>
+                    <textarea id="message" name="message" rows="10"></textarea>
+                    </div>
+                    <div>
                 <button type="submit">Submit</button>
-
-        </section>
-    </main>
-    <footer></footer>
-</body>
+                    </div>
+            </section>
+        </main>
+        <footer></footer>
+    </body>
 </html>
